<resources>
    <string name="app_name">Algeb</string>
    <string name="numComp">Numeros Complejos</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="a_bi">a + bi</string>
    <string name="editdefault">0</string>
    <string name="resultado">Resultado</string>
    <string name="titulo">Matriz</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="equals">=</string>
    <string name="point">.</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="sub">-</string>
    <string name="ac">AC</string>
    <string name="add">+</string>
    <string name="backspace">+</string>
    <string name="i">𝑖</string>
    <string name="parentOp">(</string>
    <string name="parentCl">)</string>

    <string name="emptyStringNoValid">Debe ingresar una cantidad</string>
    <string name="Determinante">Determinante</string>
    <string name="MatrizTraspuesta">Matriz Traspuesta</string>
    <string name="matrizInversaDecimal">Matriz Inversa Decimal</string>

    <string name="msgMathNoSolve">⚠ No es posible resolver un problema incompleto, revise la sintaxis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ss">Determiantes</string>
    <string name="matrices">Matrices</string>
    <string name="limpiar">Limpiar</string>
</resources>