<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1c2029"
    tools:context=".numComplejosAC">
    <androidx.cardview.widget.CardView
        android:id="@+id/toolBar"
        style="@style/cvToolBarLg"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:elevation="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Operaciones"
                android:autoSizeTextType="uniform"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/main_container_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/button_i"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/i"
                android:textColor="#FF6600"
                android:textSize="25sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>



        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_ac"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/ac"
                android:textColor="#21e7c5"
                android:textSize="8sp" />

            <Button
                android:id="@+id/buttonParentOp"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/parentOp"
                android:textColor="#21e7c5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonPartCl"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/parentCl"
                android:textColor="#21e7c5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_div"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/div"
                android:textColor="#e26363"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_seven"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"

                android:background="@drawable/button_theme"
                android:text="@string/seven"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_eight"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"

                android:background="@drawable/button_theme"
                android:text="@string/eight"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_nine"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"

                android:background="@drawable/button_theme"
                android:text="@string/nine"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_mul"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"

                android:background="@drawable/button_theme"
                android:text="@string/mul"
                android:textColor="#e26363"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_four"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"

                android:background="@drawable/button_theme"
                android:text="@string/four"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_five"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/five"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_six"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/six"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_sub"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/sub"
                android:textColor="#e26363"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_one"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/one"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_two"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/two"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_three"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/three"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/add"
                android:textColor="#e26363"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonPo"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/point"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_zero"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/zero"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/button_back"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:backgroundTint="@color/purple_200"
                android:paddingTop="5dp"

                android:src="@drawable/back_icon"
                android:textColor="#ffffff"
                android:textSize="20sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/buttonequal"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@drawable/button_theme"
                android:text="@string/equals"
                android:textColor="#e26363"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/expres"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="Ingresa la operacion..."
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/typing"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/expres"
        app:layout_constraintTop_toBottomOf="@+id/expres"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/typing" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:paddingRight="20dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/expres"
        app:layout_constraintTop_toBottomOf="@+id/expres" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />


</androidx.constraintlayout.widget.ConstraintLayout>